email verification with yahoo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,13 +19,25 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 #For mailing service
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=root
-spring.mail.password=admin
+spring.mail.host=smtp.mail.yahoo.com
+spring.mail.port=465
+spring.mail.username=preeti.1991@yahoo.com
+spring.mail.password=nnefbpbbihfrupoo
+
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+
+# Application URL for verification links
+app.base-url=http://localhost:8090
+app.verification.token.expiry.hours=24
+
 
 spring.mail.properties.mail.smtp.ssl.trust=*
-spring.mail.properties.mail.smtp.auth=true
+
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
