--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ server.port=8090
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #For h2
 spring.h2.console.enabled=true
@@ -13,10 +18,10 @@ spring.h2.console.path=/h2
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
-spring.datasource.url=jdbc:h2:mem:springAuth
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:mem:springAuth
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
 
 #For mailing service
 spring.mail.host=smtp.mail.yahoo.com
